<resources>
    <string name="study_title">待办</string>
    <string name="study_tab">待办</string>
    <string name="study_today">今天</string>
    <string name="study_upcoming">7天内</string>
    <string name="study_all">全部</string>
    <string name="study_new">新建待办</string>
    <string name="study_search">搜索事项或课程</string>
...
